fix: new clan dark mode colours

--- a/src/styles/new-clan.css
+++ b/src/styles/new-clan.css
@@ -1,5 +1,5 @@
 #new-clan-form {
-  background-color: white;
+  background-color: var(--content-background-color);
   padding: 20px;
   max-width: 500px;
   margin: auto;
